<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/sourceNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_source_name" />

        <TextView
            android:id="@+id/hintTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_hint_message1" />
        
        <TextView
            android:id="@+id/goalNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_goal_name" />

        <TextView
            android:id="@+id/hintTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_hint_message2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/phoneNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_phone_number"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</LinearLayout>
